# rugen

./: Cargo.toml
examples/sff-sprite-extract/: Cargo.toml
examples/sff-sprite-extract/src/: main.rs
examples/snd-sample-extract/: Cargo.toml
examples/snd-sample-extract/src/: main.rs
mugen-air/: Cargo.toml
mugen-air/src/: lib.rs
mugen-air/tests/: regression.rs
mugen-air/tests/examples/: chris.air  joe.air  neokyo.air  rock.air  shermie.air  shingo.air
mugen-def/: Cargo.toml
mugen-def/src/: lib.rs
mugen-def/tests/: regression.rs
mugen-def/tests/examples/: chris.cmd  chris.cns  chris.def  joe.cmd  joe.cns  joe.def  rock.cmd  rock.cns  rock.def
mugen-sff/: Cargo.toml
mugen-sff/src/: decoder.rs  lib.rs
mugen-sff/tests/samples/sample/: linked-0.pcx  linked-1.pcx  linked.sff  sample-10-20.pcx  sample-50-0.pcx  sample.sff
mugen-snd/: Cargo.toml
mugen-snd/src/: decoder.rs  lib.rs
